# kivy-ics-labs

./: README.md  pyproject.toml
01-button-label/: main.py
02-password-checker/: README.md  main.py  passwordchecker.kv
dev/99-password-checker-overlay/: main.py  passwordchecker.kv
dev/99-software-form/: drop.kv  drop.py  main.py  softwareform.kv  type_dropdown.kv
dev/name-and-age/: main.py  nameandage.kv
